syntax = "proto3";

package greet;

option go_package = "greet/greetpb";

message Greeting {
    string first_name = 1;
    string last_name = 2;
}
message GreetRequest {
    Greeting greeting = 1;
}
message GreetResponse {
    string result = 1;
}
message GreetManyTimeRequest{
    string name = 1;
    int32 number_request  =2;
}
message GreetManyTimeResponse {
    string result = 1;
}

message GreetLongRequest{
    Greeting greeting = 1;
}

message GreetLongResponse {
    string result = 1;
}

service GreetService {
    // UNARY request
    rpc Greet (GreetRequest) returns (GreetResponse){};

    // Server Streaming
    rpc GreetManyTime (GreetManyTimeRequest) returns (stream GreetManyTimeResponse){};
   
    // Client Streaming
    rpc LongGreet (stream GreetLongRequest) returns (GreetLongResponse){};

    // Bi Derection Streaming
    //rpc GreetEveryOne(stream GreetEveryOneRequest) returns (GreetEveryOneResponse){};
}